Add Kiri's phone number.

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <p>Instructor: Dr. Kiri Wagstaff
                 <br> 2079 Kelley Engineering Center
                 <br><a href="mailto:wagstafk@oregonstate.edu">kiri.wagstafff@oregonstate.edu</a>
-                <br> (541) 737-
+                <br> (541) 737-9676
                 <br>Office Hours (2079 KEC): MW 3 - 4 p.m.
             </p>
-			<p>Graduate TA: Sabrina Jesmin and Yipeng (Roger) Song
+			<p>Graduate TAs: Sabrina Jesmin and Yipeng (Roger) Song
                 <br><a href="mailto:jesmins@oregonstate.edu">jesmins@oregonstate.edu</a>, <a href="mailto:songyip@oregonstate.edu">songyip@oregonstate.edu</a>
                 <br>Office Hours: See Below
             </p>
