Update link to style guide.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -25,7 +25,7 @@
     <h2>Assignments</h2>
     <div class="content">
         <div class="instructions">
-            <p>Please read the <a style="color:#0000FF" href="161_style_guideline.pdf">style guidelines</a> for this class.</p>
+            <p>Please read the <a style="color:#0000FF" href="../161_style_guideline.pdf">style guidelines</a> for this class.</p>
             <p>Even though these are guidelines and not a standard for this class, the quality of your assignment is graded by your peers and based on having program and function headers, proper indentation, vertical spacing between statements, good variable names, etc. BE CONSISTENT!!!</p>
             <p>EVERY assignment in this course is <b>graded by demoing your work for 10-15 minutes with a TA</b>. You are required to <b>meet with a TA within two weeks of the due date</b> to demo.</p>
             <p><b>Demo Outside 2 Weeks:</b> Assignments that are not demoed within the acceptable time period will be subject to a 50 point deduction.</p>
