Update assignment instructions (content and formatting). Use underlines because bold isn't showing up with this font.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -25,12 +25,36 @@
     <h2>Assignments</h2>
     <div class="content">
         <div class="instructions">
-            <p>Please read the <a style="color:#0000FF" href="../161_style_guideline.pdf">style guidelines</a> for this class.</p>
-            <p>Even though these are guidelines and not a standard for this class, the quality of your assignment is graded by your peers and based on having program and function headers, proper indentation, vertical spacing between statements, good variable names, etc. BE CONSISTENT!!!</p>
-            <p>EVERY assignment in this course is <b>graded by demoing your work for 10-15 minutes with a TA</b>. You are required to <b>meet with a TA within two weeks of the due date</b> to demo.</p>
-            <p><b>Demo Outside 2 Weeks:</b> Assignments that are not demoed within the acceptable time period will be subject to a 50 point deduction.</p>
-            <p><b>Demo Late Assignments:</b> Late assignments must still be demoed within the two week demo period beginning from the assignment's original due date.</p>
-            <p><b>Missing a Demo:</b> If you miss your demo with a TA, you will receive a 10 point (one letter grade) deduction to that assignment for each demo missed.</p>
+	  <p><u>Good programming style</u>: Please read and follow the
+	    <a style="color:#0000FF" href="../161_style_guideline.pdf">programming
+	      style guidelines</a> for this class.</p>
+
+	  <p>Part of your grade for each assignment depends on 
+            having program and function headers, proper indentation, 
+	    vertical whitespace between statements, good variable names, 
+	    etc., as explained in the guidelines.</p>
+	  
+          <p><u>Grading</u>: Assigments 1-4 will be <u>graded by
+	      demonstrating your work for 10 minutes with a
+	      TA</u>. You are required to
+	    <u>sign up and meet with a TA within two weeks of the due date</u> to demo.</p>
+	  <ul>
+	    <li><u>Tip:</u>  Pick an early slot before they are all taken!  
+	    The earlier your demo, the sooner you get feedback, 
+	    which will help you do even better on the next assignment.</li>
+	    <li><u>Demo Outside 2 Weeks:</u> Assignments that are
+          demonstrated later than the acceptable time period will be
+          receive a 50 point deduction.  (Also, we cannot guarantee a
+          late grading slot.)</li>
+	    <li><u>Demo Late Assignments:</u> Late assignments must still
+	  be demonstrated within the two-week demo period beginning
+	  from the assignment's original due date.</li>
+	    <li><u>Missing a Demo:</u> If you miss your scheduled demo
+	  with a TA, you will receive a 10 point (one letter grade)
+	  deduction to that assignment for each demo missed.</li>
+	    <li><u>No demo:</u> If you do not demonstrate your
+	  assignment, you will receive a 0.</li>
+	  </ul>
         </div>
         <table class="assignments">
             <tr>
