Minor change to lab point guidance.

--- a/labs/index.html
+++ b/labs/index.html
@@ -24,7 +24,11 @@
     <div class="content">
         <div class="instructions">
             <h2>Labs</h2>
-            <p>If you attended a lab and did not finish, you can finish up to 3 points of the lab at home and bring it with you to the next week's lab for a grade. You must show your update from the previous lab within the first 15 minutes of the current lab to redeem points on the prior lab, otherwise the work is not accepted.</p>
+            <p>If you attended a lab and did not finish it, you can
+            finish up to 3 more points of the lab at home and bring it with
+            you to the next week's lab for a grade. You must show your
+            update from the previous lab within the first 15 minutes
+            of the current lab to gain points on the prior lab.</p>
         </div>
         <table class="assignments">
             <tr>
