Update links and formatting, and add more PDF files.

--- a/links/index.html
+++ b/links/index.html
@@ -21,14 +21,19 @@
         <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
     </div>
     <div class="content">
-        <h2>Important Links</h2>
+        <h2>Useful Links</h2>
         <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
-		<a href="162_style_guideline.pdf">CS 161 Style Guidelines</a><br>
-		</h3>
-      Oregon State University Academic Dishonesty Policies</h3>
+	  <a href="161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
+	  <a href="https://oregonstate.instructure.com/courses/1771939">Turn in Assigments (Canvas)</a></h3>
+
+     <h3>Oregon State University Academic Dishonesty Policies</h3>
+<ul>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct">Office of Student Conduct</a></li>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Dishonesty Policy</a></li>
+</ul>
+
         <h3>UNIX and Vim Documentation</h3>
+<ul>
 <li>
 <a href="unix_ref_card.pdf">UNIX Reference Card</a></li>
 <li>
@@ -38,9 +43,11 @@
 <li>
 <a href="http://eecs.oregonstate.edu/it/">EECS SSH Login Info</a></li>
 <li> <a href="http://www.openvim.com/tutorial.html">Useful vim tutorial</a></li>
-<li><a href="http://cygwin.com/index.html">Install Cygwin utilities</a> (locally run Linux commands on windows) </li>
+<li>Windows users: <a href="http://cygwin.com/index.html">Install Cygwin utilities</a> (locally run Linux commands on Windows) </li>
+</ul>
 
 <h3>C/C++ Documentation</h3>
+<ul>
 <li><a href="http://zanasi.chem.unisa.it/download/C.pdf">The C Programming Language, 2nd Ed.</a>
 </li>
 <li><a href="ansi-c-refcard-letter.pdf">ANSI C Reference Card</a>
@@ -59,8 +66,8 @@
 </li>
 <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/">GNU C++ Library</a>
 </li>
+</ul>
 
-<h3> <a href="https://go.peerceptiv.com">Turn in Assigments (Peerceptiv) </a></h3>
 <h3> <a href="https://eecs.oregonstate.edu/eecs-it/">-- EECS IT -- </a></h3>
 </div>
 </body>
