Move style guide to assignments/ directory.

--- a/links/index.html
+++ b/links/index.html
@@ -23,7 +23,7 @@
     <div class="content">
         <h2>Useful Links</h2>
         <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
-	  <a href="161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
+	  <a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
 	  <a href="https://oregonstate.instructure.com/courses/1771939">Turn in Assigments (Canvas)</a></h3>
 
      <h3>Oregon State University Academic Dishonesty Policies</h3>
