Update links and add academic integrity tutorial.

--- a/links/index.html
+++ b/links/index.html
@@ -24,12 +24,20 @@
         <h2>Useful Links</h2>
         <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
 	  <a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
-	  <a href="https://oregonstate.instructure.com/courses/1771939">Turn in Assigments (Canvas)</a></h3>
+	  <a href="https://oregonstate.instructure.com/courses/1771939">Turn in Assignments (Canvas)</a></h3>
 
      <h3>Oregon State University Academic Dishonesty Policies</h3>
 <ul>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct">Office of Student Conduct</a></li>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Dishonesty Policy</a></li>
+      <li>
+<a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a></li>
+</ul>
+
+<h3>Assistance</h3>
+<ul>
+<li> Tutoring hours
+<li> <a href="https://eecs.oregonstate.edu/eecs-it/">-- EECS IT -- </a></li>
 </ul>
 
         <h3>UNIX and Vim Documentation</h3>
@@ -68,7 +76,6 @@
 </li>
 </ul>
 
-<h3> <a href="https://eecs.oregonstate.edu/eecs-it/">-- EECS IT -- </a></h3>
 </div>
 </body>
 
