Change 'my' to 'our' TAs.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -21,7 +21,7 @@
     <div class="hamburgerContainer">
         <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
     </div>
-    <h2>Who Are My TAs?</h2>
+    <h2>Who Are Our TAs?</h2>
     <div class="taContainer">
 
         <div class="person">
