Remove extra f in Kiri's email address.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="contactInfo">
             <p>Instructor: Dr. Kiri Wagstaff
                 <br> 2079 Kelley Engineering Center
-                <br><a href="mailto:wagstafk@oregonstate.edu">kiri.wagstafff@oregonstate.edu</a>
+                <br><a href="mailto:wagstafk@oregonstate.edu">kiri.wagstaff@oregonstate.edu</a>
                 <br> (541) 737-9676
                 <br>Office Hours (2079 KEC): MW 3 - 4 p.m.
             </p>
