--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
     <div class="headline">
         <div class="announcements">
-            <h3>Important Announcements:</h3>
+            <h3>Important Dates:</h3>
                 <p> 01/06 - First day of class
-                <br> 01/12 - Last day to Add a class w/o dept. approval
+                <br> 01/12 - Last day to Add a class without dept. approval
                 <br> 01/12 - Last day to Drop a class for 100% refund
-		<br> 01/20 - Martin Luther King, Jr. Day, No School
-<!--		<br> 03/21 - <b>Final Exam in WNGR 151</b>: -->
+		<br> 01/20 - Martin Luther King, Jr. Day (No School)
+		<br> 03/16 - <font color="red">Final Exam, 6-7:50 p.m. in LINC 228</font>
             </p>
         </div>
         <div class="contactInfo">
@@ -49,7 +49,7 @@
                 <br>Office Hours (2079 KEC): MW 3 - 4 p.m.
             </p>
 			<p>Graduate TAs: Sabrina Jesmin and Yipeng (Roger) Song
-                <br><a href="mailto:jesmins@oregonstate.edu">jesmins@oregonstate.edu</a>, <a href="mailto:songyip@oregonstate.edu">songyip@oregonstate.edu</a>
+                <br><a href="mailto:jesmins@oregonstate.edu">jesmins@oregonstate.edu</a> and <a href="mailto:songyip@oregonstate.edu">songyip@oregonstate.edu</a>
                 <br>Office Hours: See Below
             </p>
         </div>
