--- a/links/index.html
+++ b/links/index.html
@@ -24,8 +24,10 @@
         <h2>Useful Links</h2>
         <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
 	  <a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
-	  <a href="https://oregonstate.instructure.com/courses/1771939">Turn in Assignments (Canvas)</a></h3>
-
+	  Turn in Assignments: 
+	  <a href="https://oregonstate.instructure.com/courses/1771939">
+	    Canvas</a> and
+	  <a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a></h3>
      <h3>Oregon State University Academic Dishonesty Policies</h3>
 <ul>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct">Office of Student Conduct</a></li>
