Many updates for new class, and commented out to-be-written bits.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,11 +16,11 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2019: MWF 10 - 10:50am, WNGR 151 &amp; 2 - 2:50pm, LINC 100</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LIC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="unselected" href="../syllabus/">syllabus</a><a class="selected" href="../calendar/">calendar</a><a class="unselected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="unselected" href="../links/">useful links</a><a class="unselected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
-        <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
+      <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
     </div>
     <h2 style="text-align: center;">Calendar 
 <!--- <a href="http://web.engr.oregonstate.edu/~parhammj/161/">Videos</a> -->
@@ -28,64 +28,73 @@
     <p style="text-align: center;">All items are tentative and subject to change</p>
     <div class="calendarContainer"></div>
 </body>
+<center>
 <table>
     <tr>
         <th>Date</th>
-        <th>Lecture</th>
-        <th>Slide</th>
-        <th>Slide Notes</th>
-        <th>Assigned Reading</th>
-        <th>Assignments</th>
+        <th width=30%>Lecture</th>
+        <th width=15%>Slides and Links</th>
+        <th width=20%>Assigned Reading</th>
+        <th width=25%>Assignment Due Dates</th>
     </tr>
 	<tr>
-        <td class="weekBreak" colspan="6">Week #1 </td>
+        <td class="weekBreak" colspan="5">Week #1 <hr></td>
     </tr>
       <tr>
         <td>01/06</td>
-        <td>Introduction, Syllabus</td>
-        <td><a href="syllabus.pdf">It's in the Syllabus</a> </td>
-        <td> </td>
+        <td>What this class offers you,<br>
+	  what your responsibilities are,<br>
+	  and how we communciate with computers</td>
+        <td>Lecture 1<br>
+	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a></td>
         <td>
-	  Rao Chapter 1
+	  Rao Lesson 1 (pp. 1-15)<br>
+	  Rao Lesson 2 (pp. 17-29)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT Lecture 1</a>, <a href="https://www.cs.bu.edu/AboutCS/WhatIsCS.pdf">What is CS?</a>, <a href="http://www.huffingtonpost.com/vinamrata-singal/six-reasons-to-study-computer-science_b_3714030.html">Why study CS?</a>
         </td>
+        <td></td>
       </tr>
       <tr>
         <td>01/08</td>
-        <td>What is CS, computer programming, and C++?</td>
-        <td><a href="slide1-w19.pdf">Lecture 1</a></td>
-        <td><a href="slide1-w19-notes.pdf">Lecture 1 notes</a></td>
+        <td>How do we store information in a computer?<br>
+	  How do we calculate new information?</td>
+        <td>Lecture 2</td>
         <td>
+	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
             <a href="https://en.wikibooks.org/wiki/C%2B%2B_Programming/Chapters/C%2B%2B">Wiki Chap. 1</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL1.html">Miller Lecture 1</a>
         </td>
       </tr>
       <tr>
         <td>01/10</td>
-        <td>Arithmetic Expressions and Calling Functions</td>
-        <td> <a href="slide2-w19.pdf">Lecture 2</a></td>
-        <td> <a href="slide2-w19-notes.pdf">Lecture 2 Notes</a></td>
+        <td>How do computers interact with users?<br>
+	  How do computers make decisions?</td>
+        <td>Lecture 3</td>
         <td>
+	  Rao Lesson ? (pp. 31-47 + 58-59)<br>
              <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL1.html">Miller Lecture 2</a> &amp; <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 2</a>
         </td>
-		<td>Assignment #1 due Sunday, 01/12 by 11:59 p.m. (TEACH)</td>
+	<td>Assignment #1 due Sunday, 01/12 by 11:59 p.m. (TEACH)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #2</td>
+        <td class="weekBreak" colspan="5">Week #2 <hr></td>
       </tr>
       <tr>
         <td>01/13</td>
-        <td>User Input, Variables, Conditionals</td>
-        <td> <a href="slide3-w19.pdf">Lecture 3</a></td>
-        <td> <a href="slide3-w19-notes.pdf">Lecture 3 Notes</a></td>
-        <td> <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT/Lecture 1</a></td>
+        <td>More about computer decision-making<br>
+	  How can we guard against user mistakes?
+	</td>
+        <td>Lecture 4</td>
+        <td> 
+	  Rao Lesson 6 (pp. 113-127)<br>
+<a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT/Lecture 1</a></td>
       </tr>
+<tr><td class="weekBreak" colspan=5>More to come!</td></tr>
+<!--
       <tr>
         <td>01/15</td>
         <td>C++ Conditionals</td>
         <td> <a href="slide4-w19.pdf">Lecture 4</a></td>
-        <td> <a href="slide4-w19-notes.pdf">Lecture 4 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf"></a>
         </td>
 		<td></td>
 		</tr>
@@ -93,7 +102,6 @@
         <td>01/17</td>
         <td>Strings and Review</td>
         <td> <a href="slide5-w19.pdf">Lecture 5</a></td>
-        <td> <a href="slide5-w19-notes.pdf">Lecture 5 Notes</a></td>
         <td>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a>, <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 4.1-4.6</a>, &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -101,7 +109,7 @@
 		Assignment #2 Design due Sunday, 1/19 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #3</td>
+        <td class="weekBreak" colspan="5">Week #3 <hr></td>
       </tr>
       <tr>
         <td>01/20</td>
@@ -115,7 +123,6 @@
         <td>01/22</td>
         <td>Loops (for, while, do/while)</td>
         <td> <a href="slide6-w19.pdf">Lecture 6</a></td>
-        <td> <a href="slide6-w19-notes.pdf">Lecture 6 Notes</a></td>
         <td>
             <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 6.1-6.3</a>
         </td>
@@ -125,20 +132,17 @@
         <td>01/24</td>
         <td>Example Loops &amp; C++ String Objects</td>
         <td> <a href="slide7-w19.pdf">Lecture 7</a></td>
-        <td> <a href="slide7-w19-notes.pdf">Lecture 7 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf"></a>
         </td>
         <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
     </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #4</td>
+        <td class="weekBreak" colspan="5">Week #4 <hr></td>
       </tr>
       <tr>
         <td>01/27</td>
         <td>More Error Handling, Intro Functions</td>
         <td> <a href="slide8-w19.pdf">Lecture 8</a></td>
-        <td> <a href="slide8-w19-notes.pdf">Lecture 8 Notes</a></td>
         <td>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> &amp; <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 3</a>
         </td>
@@ -147,23 +151,19 @@
         <td>01/29</td>
         <td>Functions</td>
          <td> <a href="slide9-w19.pdf">Lecture 9</a></td>
-        <td> <a href="slide9-w19-notes.pdf">Lecture 9 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf"></a>
         </td>
       </tr>
       <tr>
         <td>01/31</td>
         <td>More Functions and Details</td>
          <td> <a href="slide10-w19.pdf">Lecture 10</a></td>
-        <td> <a href="slide10-w19-notes.pdf">Lecture 10 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec03.pdf"></a>
         </td>
         <td>Assignment #3 Design due Sunday, 02/02, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #5</td>
+        <td class="weekBreak" colspan="5">Week #5 <hr></td>
       </tr>
       <tr>
         <td>02/03</td>
@@ -177,8 +177,7 @@
       <tr>
         <td>02/05</td>
         <td>Exam I </td>
-        <td><!--a href="slides/slide9-notes.pdf"></a--></td>
-        <td><!--a href="test1_noans_f16.pdf"></a><br><a href="test1_ans_f16.pdf"></a--></td>
+        <td><a href="test1_noans_f16.pdf"></a><br><a href="test1_ans_f16.pdf"></a></td>
         <td></td>
 	<td>Assignment #3 Peer Review due Wednesday, 02/05 by 11:59 p.m. (Canvas)</td>
       </tr>
@@ -188,57 +187,49 @@
         <td><a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
 		<a href="CS161ExamIWinter2019_ans.pdf">Form 1 Key</a><br>Form 2 has the same questions but in a different order </br></td>
         <td></td>
-        <td></td>
 		<td>Assignment #3 due Sunday, 02/09 by 11:59 p.m. (TEACH)</td>
 		</tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #6</td>
+        <td class="weekBreak" colspan="5">Week #6 <hr></td>
       </tr>
       <tr>
         <td>02/10</td>
         <td>Finish Functions, Introduce C++ References vs. Pointers</td>
          <td> <a href="slide11-w19.pdf">Lecture 11</a></td>
-        <td> <a href="slide11-w19-notes.pdf">Lecture 11 Notes</a></td>
         <td> <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec03.pdf">MIT/Lecture 3</a></td>
       </tr>
       <tr>
         <td>02/12</td>
         <td>Demostrate C++ References vs. Pointers</td>
          <td> <a href="slide12-w19.pdf"></a></td>
-        <td> <a href="slide12-w19-notes.pdf">Lecture 12 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec03.pdf"></a>
         </td>
 		</tr>
       <tr>
         <td>02/14</td>
         <td>Recursion/Memory Model</td>
         <td> <a href="slide13-w19.pdf">Lecture 13</a></td>
-        <td> <a href="slide13-w19-notes.pdf">Lecture 13 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec05.pdf"></a>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec05.pdf">MIT/Lecture 5</a>
         </td>
         <td>Assignment #4 Design due Sunday, 02/16, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #7</td>
+        <td class="weekBreak" colspan="5">Week #7 <hr></td>
       </tr>
       <tr>
         <td>02/17</td>
         <td>Finish Recursion/Memory Model</td>
         <td> <a href="slide14-w19.pdf">Lecture 14</a></td>
-        <td> <a href="slide14-w19-notes.pdf">Lecture 14 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec05.pdf"></a>
         </td>
 		</tr>
       <tr>
         <td>02/19</td>
         <td>Intro to 1D Arrays/C-style strings</td>
         <td> <a href="slide15-w19.pdf">Lecture 15</a></td>
-        <td> <a href="slide15-w19-notes.pdf">Lecture 15 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf"></a>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf">MIT/Lecture 4</a>
         </td>
 	<td>Assignment #4 Peer Review due Wednesday, 02/19 by 11:59 p.m. (Canvas)</td>
 		</tr>
@@ -246,42 +237,35 @@
         <td>02/21</td>
         <td>C vs. C++, How to Pass arrays</td>
         <td> <a href="slide16-w19.pdf">Lecture 16</a></td>
-        <td> <a href="slide16-w19-notes.pdf">Lecture 16 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf"></a>
         </td>
 		<td>Assignment #4 due Sunday, 02/23 by 11:59 p.m. (TEACH)</td>
 		</tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #8</td>
+        <td class="weekBreak" colspan="5">Week #8 <hr></td>
       </tr>
       <tr>
         <td>02/24</td>
         <td>Finish arrays/C++ vs. C-style strings</td>
         <td> <a href="slide17-w19.pdf">Lecture 17</a></td>
-        <td> <a href="slide17-w19-notes.pdf">Lecture 17 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf"></a>
         </td>
 		</tr>
       <tr>
         <td>02/26</td>
         <td>Static vs. Dynamic Multi-dimensional arrays</td>
         <td> <a href="slide18-w19.pdf">Lecture 18</a></td>
-        <td> <a href="slide18-w19-notes.pdf">Lecture 18 Notes</a></td>
 		</tr>
       <tr>
         <td>02/28</td>
         <td>Command Line Arguements</td>
         <td> <a href="slide19-w19.pdf">Lecture 19</a></td>
-        <td> <a href="slide19-w19-notes.pdf">Lecture 19 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf"></a>
         </td>
         <td>Assignment #5 Design due Sunday, 03/01, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #9</td>
+        <td class="weekBreak" colspan="5">Week #9 <hr></td>
       </tr>
       <tr>
         <td>03/02</td>
@@ -297,9 +281,8 @@
       <tr>
         <td>03/04</td>
         <td>Exam II</td>
-        <td><!--a href="cs161_exam2.pdf"></a--></td>
-        <td><!--a href="cs161_exam2-ans.pdf"></a--></td>
-        <td>Review</td>
+        <td><a href="cs161_exam2.pdf"></a></td>
+        <td><a href="cs161_exam2-ans.pdf"></a></td>
 	<td>Assignment #5 Peer Review due Wednesday, 03/04 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
@@ -307,40 +290,38 @@
         <td>Exam II Results</td>
         <td><a href="CS 161 Exam II Winter 2019 Form1.pdf">Exam II</a></td>
         <td><a href="CS 161 Exam II Winter 2019 Form1 ans.pdf">Exam II Answers</a></td>
-		<td><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf"></a>
         </td>
 		<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
 		</tr>
       <tr>
-        <td class="weekBreak" colspan="6">Week #10</td>
+        <td class="weekBreak" colspan="5">Week #10 <hr></td>
       </tr>
       <tr>
         <td>03/09</td>
         <td>Command-Line Arguments</td>
         <td> <a href="slide19-w19.pdf">Lecture 19</a></td>
-        <td> <a href="slide19-w19-notes.pdf">Lecture 19 Notes</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec07.pdf"></a>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec07.pdf">MIT/Lecture 7</a>
         </td>
 		</tr>
       <tr>
         <td>03/11</td>
         <td>2-D/Command-Line Arguments Activity </td>
         <td> <a href="slide20-w19.pdf">Lecture 20</a></td>
-        <td> <a href="slide20-w19-notes.pdf">Lecture 20 Notes</a></td>
         <td> </td>
       </tr>
       <tr>
         <td>03/13</td>
         <td>Closing Remarks, Preview of CS 162, Ask Me Anything</td>
-        <td> <a href="slide21-w19-notes.pdf">Lecture 21 Notes</a></td>
         <td></td>
 		<td></td>
         <td></td>
       </tr>
+-->
 	   <tr>
-        <td colspan=5><h2>03/19, Thursday, Final Exam: 2 - 3 p.m. in LIC 228 (update this when final date/location is known)</h2></td>
+             <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LIC 228</h2></td>
       </tr>
 </table>
+</center>
 
 </html>
