Note cplusplus.com as source.

--- a/links/index.html
+++ b/links/index.html
@@ -68,7 +68,7 @@
 </li>
 <li><a href="http://www.gnu.org/software/gnu-c-manual/gnu-c-manual.pdf">GNU C Reference Manual</a>
 </li>
-<li><a href="http://www.cplusplus.com/doc/">C++ Documentation</a>
+<li><a href="http://www.cplusplus.com/doc/">C++ Documentation and Tutorials (cplusplus.com)</a>
 </li>
 <li><a href="http://www.cprogramming.com/tutorial.html">C++ Tutorial</a>
 </li>
