Update reading assignments.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -50,7 +50,13 @@
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
 	  Rao Lesson 2 (pp. 17-29)<br>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT Lecture 1</a>, <a href="https://www.cs.bu.edu/AboutCS/WhatIsCS.pdf">What is CS?</a>, <a href="http://www.huffingtonpost.com/vinamrata-singal/six-reasons-to-study-computer-science_b_3714030.html">Why study CS?</a>
+	  <p></p>
+	  If you don't yet have the textbook, start here:
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT Lecture 1</a> or 
+<a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL1.html">Miller Lecture 1</a>
+<br>
+<!-- <a href="https://www.cs.bu.edu/AboutCS/WhatIsCS.pdf">What is CS?</a>,
+ <a href="http://www.huffingtonpost.com/vinamrata-singal/six-reasons-to-study-computer-science_b_3714030.html">Why study CS?</a>-->
         </td>
         <td></td>
       </tr>
@@ -61,7 +67,8 @@
         <td>Lecture 2</td>
         <td>
 	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
-            <a href="https://en.wikibooks.org/wiki/C%2B%2B_Programming/Chapters/C%2B%2B">Wiki Chap. 1</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL1.html">Miller Lecture 1</a>
+	  or 
+          <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL2.html">Miller Lecture 2</a> 
         </td>
       </tr>
       <tr>
@@ -70,8 +77,8 @@
 	  How do computers make decisions?</td>
         <td>Lecture 3</td>
         <td>
-	  Rao Lesson ? (pp. 31-47 + 58-59)<br>
-             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL1.html">Miller Lecture 2</a> &amp; <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 2</a>
+	  Rao Lesson 5 (pp. 85-110)<br>
+or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf">MIT Lecture 2</a> 
         </td>
 	<td>Assignment #1 due Sunday, 01/12 by 11:59 p.m. (TEACH)</td>
       </tr>
@@ -86,7 +93,7 @@
         <td>Lecture 4</td>
         <td> 
 	  Rao Lesson 6 (pp. 113-127)<br>
-<a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec01.pdf">MIT/Lecture 1</a></td>
+</td>
       </tr>
 <tr><td class="weekBreak" colspan=5>More to come!</td></tr>
 <!--
@@ -103,7 +110,7 @@
         <td>Strings and Review</td>
         <td> <a href="slide5-w19.pdf">Lecture 5</a></td>
         <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a>, <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 4.1-4.6</a>, &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a>, &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
 		<td><br>
 		Assignment #2 Design due Sunday, 1/19 by 11:59 p.m. (Canvas)</td>
@@ -124,7 +131,6 @@
         <td>Loops (for, while, do/while)</td>
         <td> <a href="slide6-w19.pdf">Lecture 6</a></td>
         <td>
-            <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 6.1-6.3</a>
         </td>
 	<td>Assignment #2 Peer Review due Wednesday, 01/22 by 11:59 p.m. (Canvas)</td>
 		</tr>
@@ -144,7 +150,7 @@
         <td>More Error Handling, Intro Functions</td>
         <td> <a href="slide8-w19.pdf">Lecture 8</a></td>
         <td>
-            <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> &amp; <a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">Downey Chap 3</a>
+            <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
       </tr>
       <tr>
