Comment out old material until it is replaced with new.

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2019: MWF 10 - 10:50am, WNGR 151 &amp; 2 - 2:50pm, LINC 100</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LIC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="selected" href="../syllabus/">syllabus</a><a class="unselected" href="../calendar/">calendar</a><a class="unselected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="unselected" href="../links/">useful links</a><a class="unselected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
@@ -24,6 +24,8 @@
     </div>
     <div class="syllabusContent">
         <h2 class="centerSyllabus" style="text-align: center;">Syllabus</h2>
+<h3>Coming soon</h3>
+<!--
         <h3>Office Hours - 2101 KEC</h3>
         <ul class="none">
 			<li>Dr. Jennifer Parham-Mocello (2021 KEC): M 11am-12pm, 3pm-4pm &amp; W 11am-12pm</li>
@@ -43,10 +45,10 @@
 		</ul>
         <h3>Textbook Resources</h3>
         <ul class="none">
-            <!--li (Halterman)//a(href="http://python.cs.southern.edu/cppbook/progcpp.pdf") http://python.cs.southern.edu/cppbook/progcpp.pdf-->
+            <li> (Halterman) <a href="http://python.cs.southern.edu/cppbook/progcpp.pdf"> http://python.cs.southern.edu/cppbook/progcpp.pdf</a>
             <li>(Wikibooks) <a href="https://en.wikibooks.org/wiki/C%2B%2B_Programming">Wikibooks C++ Programming</a></li>
             <li>(Miller) <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/">An Introduction to the Imperative Part of C++</a></li>
-            <!--li>(Gray) <a href="http://www.uow.edu.au/~nabg/ABC/ABC.html">A Beginners C++ (older perspective)</a></li-->
+            <li>(Gray) <a href="http://www.uow.edu.au/~nabg/ABC/ABC.html">A Beginners C++ (older perspective)</a></li>
             <li>(Downey)<a href="http://greenteapress.com/thinkcpp/thinkCScpp.pdf">How to think like a computer scientist</a></li>
         </ul>
         <h3>Additional Textbook References</h3>
@@ -271,6 +273,7 @@
         <p>Students with documented disabilities who may need accommodations, who have any emergency medical information the instructor should be aware of, or who need special arrangements in the event of evacuation, should make an appointment with the instructor as early as possible, and no later than the first week of the term. Class materials will be made available in an accessible format upon request.</p>
         <h3>Religious Accommodation of Students Policy</h3>
         <p>Oregon State University recognizes a diverse group of students, and the university accommodates diverse religious holidays. Please read the policy on religious accommodations for students:</p><a href="http://oregonstate.edu/oei/sites/default/files/religious_accommodations_for_student_policy_05_17_2012_v2.pdf">religious_accomodations</a>
+-->
         <script>
             $(document).ready(function () {
                 $(document).scroll(function () {
