Add link to Piazza.

--- a/links/index.html
+++ b/links/index.html
@@ -24,10 +24,14 @@
         <h2>Useful Links</h2>
         <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
 	  <a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
-	  Turn in Assignments: 
+	  Turn in assignments: 
 	  <a href="https://oregonstate.instructure.com/courses/1771939">
 	    Canvas</a> and
-	  <a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a></h3>
+	  <a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a><br>
+	Class discussions: <a href="https://piazza.com/class/k4eslq3v74a11q">Piazza</a>
+</h3>
+
+
      <h3>Oregon State University Academic Dishonesty Policies</h3>
 <ul>
       <li><a href="https://studentlife.oregonstate.edu/studentconduct">Office of Student Conduct</a></li>
