Add Lucas's picture.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -89,7 +89,7 @@
         <div class="person">
             <div class="namePhoto">
                 <h3>Lucas Pichette</h3>
-                <div class="imgContainer"><img src=""></div>
+                <div class="imgContainer"><img src="pics/lucas.jpg"></div>
             </div>
             <p>Hello, I'm Lucas Pichette. I'm a 2018 graduate from Sam Barlow High School, currently a second-year at OSU, and I had very little programming experience going into my major as a computer scientist. My focus is in cyber security, but I'm a fan of almost anything computer science related. TAs and www.learncpp.com are what saved my rear in CS161 and CS162, I encourage the use of both of these resources!!</p>
         </div>
