Add Austin Wilmoth's hours and bio.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -102,6 +102,14 @@
         
 	<div class="person">
 	    <div class="namePhoto">
+		<h3>Austin Wilmoth</h3>
+		<div class="imgContainer"><img src="pics/austin.jpg"></div>
+	    </div>
+	    <p>Hello, my name is Austin and I am a senior in computer science. I enjoy helping people so feel free to come by with any questions. Outside of computer science, I am part of the OSU Music Production Collective where I produce many types of music from punk/emo to lo-fi hip hop.</p>
+	</div>
+
+	<div class="person">
+	    <div class="namePhoto">
 		<h3>Cheng Xie</h3>
 		<div class="imgContainer"><img src="pics/chengxie2.jpg"></div>
 	    </div>
