--- a/TABios/index.html
+++ b/TABios/index.html
@@ -38,12 +38,21 @@
 <!-- undergrad TAs -->        
         <div class="person">
             <div class="namePhoto">
+                <h3>Megan Black</h3>
+                <div class="imgContainer"><img src="pics/megan.jpg"></div>
+            </div>
+            <p>
+                Hello! My name is Megan Black and I am a second-year Computer Science student focusing on a mix of bioinformatics and security with a music minor on the side. I am from Portland, Oregon and outside of CS, I love music, gaming, and hanging out with my cat. Feel free to shoot me an email if you're stuck on anything in this class, CS 161 can be challenging and move fast but I know you can do it!
+            </p>
+        </div>
+
+        <div class="person">
+            <div class="namePhoto">
                 <h3>Eric Branner</h3>
                 <div class="imgContainer"><img src="pics/eric.jpg"></div>
             </div>
             <p>
                 Hi all! My name is Erick Branner and I am a second year Applied Computer Science student from Sherwood, Oregon. I am currently involved in undergraduate research related to machine understanding of music. Aside from CS, I enjoy photography -- I shoot mainly sports for The Daily Barometer, Oregon State University's student newspaper. I look forward to working with y'all!
-
             </p>
         </div>
 
