--- a/links/index.html
+++ b/links/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2020: MWF 2 - 2:50pm, LINC 228</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LINC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="unselected" href="../syllabus/">syllabus</a><a class="unselected" href="../calendar/">calendar</a><a class="unselected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="selected" href="../links/">useful links</a><a class="unselected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
